# mitama-cpp-result

./: CMakeLists.txt  build_and_test.sh  mkdocs.yml
.circleci/: config.yml
docs/: README.md
docs/maybe/: APIs.md  comparisons.md  intro.md
docs/maybe/_APIs/: and_finally.md  and_peek.md  and_then.md  as_ref.md  cloned.md  conj.md  disj.md  expect.md  filter.md  flatten.md  get_or_emplace.md  get_or_emplace_with.md  is_just.md  is_nothing.md  map.md  map_or.md  map_or_else.md  ok_or.md  ok_or_else.md  or_else.md  or_finally.md  or_peek.md  replace.md  replace_with.md  transpose.md  unwrap.md  unwrap_or.md  unwrap_or_default.md  unwrap_or_else.md
docs/result/: APIs.md  comparisons.md  intro.md  metafunctions.md
docs/result/_APIs/: and_finally.md  and_peek.md  and_then.md  conj.md  disj.md  err.md  is_err.md  is_ok.md  map.md  map_err.md  map_or_else.md  ok.md  or_else.md  or_finally.md  or_peek.md  transpose.md  unwrap.md  unwrap_err.md  unwrap_or.md  unwrap_or_default.md  unwrap_or_else.md
docs/result/_metafunctions/: is_result.md  is_result_with.md
include/mitama/: panic.hpp
include/mitama/cmp/: ord.hpp
include/mitama/concepts/: dereferencable.hpp  dictionary.hpp  display.hpp  format.hpp  formattable.hpp  meta_function.hpp  pointer_like.hpp  range.hpp  satisfy.hpp
include/mitama/match/: match.hpp
include/mitama/maybe/: maybe.hpp  range_to_maybe.hpp
include/mitama/maybe/factory/: just_nothing.hpp
include/mitama/result/: result.hpp  result_io.hpp
readthedocs/: requirements.txt
test/: Maybe_Test.cpp  Result_Test.cpp
(+7 files in other folders)
